# vik

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  Cargo.toml  DESIGN.md  Dockerfile  LICENSE  README.md  WORKFLOW.md  rustfmt.toml  workflow.yml
.agents/prompts/: implement.md  merge.md  plan.md
.agents/skills/commit/: SKILL.md
.agents/skills/debug/: SKILL.md
.agents/skills/land/: SKILL.md  land_watch.py
.agents/skills/linear/: SKILL.md
.agents/skills/project-status/: SKILL.md
.agents/skills/pull/: SKILL.md
.agents/skills/push/: SKILL.md
.agents/skills/vik/: SKILL.md
.github/codex/prompts/: pr-review.md  review.md
.github/scripts/: codex-pr-review.sh  codex-review-comments.js  codex-review-comments.test.js  test-codex-pr-review.sh
.github/workflows/: ci.yml  codex-review.yml  draft-release.yml  release.yml
crates/vik-agent/: Cargo.toml
crates/vik-agent/src/: adapter.rs  claude_code.rs  client.rs  error.rs  event.rs  lib.rs  process.rs  runtime.rs  session_log.rs  tests.rs  tools.rs  worker.rs
crates/vik-agent/src/agent/: claude_code.rs  codex.rs  mod.rs
crates/vik-agent/src/codex/: command.rs  events.rs  mod.rs  process.rs  session_log.rs  tests.rs  tools.rs  transport.rs
crates/vik-cli/: Cargo.toml
crates/vik-cli/src/: check.rs  command.rs  doctor.rs  env.rs  main.rs  mcp.rs  service.rs  start.rs  work.rs
crates/vik-cli/src/service/: manager.rs  mod.rs
crates/vik-core/: Cargo.toml
crates/vik-core/src/: agent.rs  issue.rs  lib.rs  snapshot.rs  tracker.rs  utils.rs  workflow.rs  workspace.rs
crates/vik-http/: Cargo.toml
crates/vik-http/src/: lib.rs
crates/vik-orchestrator/: Cargo.toml
crates/vik-orchestrator/src/: dispatch.rs  engine.rs  error.rs  gate.rs  lib.rs  lifecycle.rs  reconcile.rs  retry.rs  session_log.rs  state.rs  state_events.rs  state_snapshot.rs  tests.rs
crates/vik-tracker/: Cargo.toml
crates/vik-tracker/src/: client.rs  github.rs  lib.rs  normalize.rs  queries.rs  tests.rs  tracker.rs
crates/vik-tracker/src/provider/: github.rs  linear.rs  mod.rs
crates/vik-tracker/src/providers/: mod.rs
crates/vik-tracker/src/providers/feishu/: client.rs  mod.rs  tests.rs
crates/vik-tracker/src/providers/github/: client.rs  mod.rs  queries.rs  tests.rs
crates/vik-tracker/src/providers/linear/: client.rs  mod.rs  normalize.rs  queries.rs  tests.rs
crates/vik-workflow/: Cargo.toml
crates/vik-workflow/src/: config.rs  diagnosis.rs  error.rs  lib.rs  parser.rs  prompt.rs  reloader.rs  tests.rs  yaml.rs
crates/vik-workspace/: Cargo.toml
crates/vik-workspace/src/: error.rs  lib.rs  manager.rs  path.rs  tests.rs
docker/: entrypoint.sh  env-passthrough.sh
docs/: PRD.md  configuration.md  docker.md  get-started.md  observation.md  service-daemon.md  spec-conformance.md  workflow-init.md
docs/adr/: 0001-yaml-workflow-definition.md  0002-explicit-issue-management-commands.md  0003-stateless-reconciliation-model.md  0004-in-memory-running-state.md  0005-session-factory-indirection.md  0006-single-binary-crate.md  0007-hooks-reads-session-status.md
docs/development/: architecture.md  checks.md  code-conventions.md  index.md  pull-requests.md  review-checklist.md  setup.md  testing.md
docs/usage/: configuration.md  docker.md  get-started.md  observation.md  service-daemon.md
docs/usage/agents/: claude-code.md  codex.md
docs/usage/trackers/: feishu.md  github.md  linear.md
examples/: full.yml
scripts/: install.sh
src/: main.rs
src/agent/: mod.rs  response.rs
src/agent/adapters/: mod.rs
src/agent/adapters/claude_code/: event.rs  events.rs  mod.rs
src/agent/adapters/codex/: events.rs  mod.rs
src/cli/: doctor.rs  init.rs  lifecycle.rs  mod.rs  run.rs  shutdown.rs
src/config/: agent.rs  diagnose.rs  issue.rs  loop_.rs  mod.rs  server.rs  workspace.rs
src/context/: intake.rs  mod.rs  pull.rs  run.rs
src/daemon/: lifecycle.rs  mod.rs  runner.rs  runtime.rs  state.rs
src/daemon/detach/: mod.rs  unix.rs  windows.rs
src/daemon/signals/: mod.rs  tests.rs  unix.rs  windows.rs
src/hooks/: mod.rs
src/logging/: layers.rs  mod.rs  phase.rs  retention.rs  spans.rs  stdout.rs  tests.rs
src/orchestrator/: event.rs  intake.rs  launcher.rs  mod.rs  monitor.rs  pull.rs  running.rs  session_manager.rs  types.rs
src/server/: mod.rs
src/server/routes/: mod.rs  status.rs
src/server/services/: mod.rs  url.rs
src/session/: factory.rs  jsonl_writer.rs  mod.rs  snapshot.rs
src/shell/: command_ext.rs  mod.rs
src/template/: context.rs  jinja.rs  mod.rs  prompt.rs
src/templates/: mod.rs
src/templates/matt_pocock/: mod.rs  workflow.rs
src/templates/matt_pocock/prompts/: grill.md  issues.md  merge.md  mod.rs  prd.md  review.md  work.md
src/templates/matt_pocock/skills/: grill-me.md  grill-with-docs.md  to-issues.md  to-prd.md
src/templates/simple/: mod.rs  workflow.yml
src/templates/simple/prompts/: mod.rs  review.md  work.md
src/templates/symphony/: mod.rs  workflow.rs
src/templates/symphony/prompts/: merge.md  mod.rs  plan.md  review.md  rework.md  work.md
src/templates/symphony/skills/: symphony-workflow.md
src/templates/trackers/: github.rs  github_projects.rs  linear.rs  mod.rs
src/templates/trackers/github/: issues-json.sh  operations.md  read.md  skill.md
src/templates/trackers/github_projects/: context.md  items-json.sh  operations.md  read.md  skill.md
src/templates/trackers/linear/: issues-json.sh  operations.md  read.md  skill.md
src/utils/: paths.rs
src/workflow/: builder.rs  loader.rs  mod.rs  prompts.rs
src/workspace/: mod.rs
tests/: cli_help.rs  doctor_cli.rs  init_cli.rs  lifecycle_cli.rs
tests/fixtures/agent_events/claude_code/: happy_path.jsonl  multi_text_blocks.jsonl
tests/fixtures/agent_events/codex/: happy_path.jsonl  rate_limit_and_error.jsonl
tests/fixtures/workflows/: warning.yml
tests/fixtures/workflows/valid/: workflow.yml
tests/fixtures/workflows/valid/prompts/: implement.md  issues.md  plan.md
