[workspace]
members = [
  "crates/vik-agent",
  "crates/vik-cli",
  "crates/vik-core",
  "crates/vik-http",
  "crates/vik-orchestrator",
  "crates/vik-tracker",
  "crates/vik-workflow",
  "crates/vik-workspace",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/openai/vik"
rust-version = "1.95"
