[package]
name = "vik"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/yii-labs/vik"
authors = ["Yii <forehalo@gmail.com>"]
description = "Vik is an issue-driven coding workflow automation tool."
readme = "README.md"
publish = true

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
chrono = { version = "0.4.44", features = ["serde", "clock"] }
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
futures = "0.3.32"
indexmap = { version = "2.14.0", features = ["serde"] }
libc = "0.2.186"
minijinja = "2.19.0"
nix = { version = "0.31.2", features = ["signal", "process", "fs"] }
regex = "1.12.3"
reqwest = { version = "0.13.3", default-features = false, features = [
  "blocking",
  "json",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.33"
thiserror = "2.0.18"
tokio = { version = "1.52.2", features = ["full", "test-util"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.10", features = ["trace"] }
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = [
  "json",
  "env-filter",
  "fmt",
  "std",
] }
uuid = { version = "1.23.1", features = ["v7"] }

[dev-dependencies]
tempfile = "3.27.0"
wiremock = "0.6.5"
