[package]
name = "vik-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
vik-core = { version = "0.1.0", path = "../vik-core" }
vik-workflow = { version = "0.1.0", path = "../vik-workflow" }
vik-workspace = { version = "0.1.0", path = "../vik-workspace" }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = [
  "fs",
  "io-util",
  "process",
  "time",
  "macros",
  "rt-multi-thread",
  "sync",
] }
tracing = "0.1.43"

[dev-dependencies]
tempfile = "3.27.0"
