[package]
name = "vik-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = "0.1.89"
clap = { version = "4.6.1", features = ["derive", "env"] }
dotenvy = "0.15.7"
libc = "0.2.186"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
vik-agent = { version = "0.1.0", path = "../vik-agent" }
vik-core = { version = "0.1.0", path = "../vik-core" }
vik-http = { version = "0.1.0", path = "../vik-http" }
vik-orchestrator = { version = "0.1.0", path = "../vik-orchestrator" }
vik-tracker = { version = "0.1.0", path = "../vik-tracker" }
vik-workflow = { version = "0.1.0", path = "../vik-workflow" }
tokio = { version = "1.52.1", features = [
  "macros",
  "rt-multi-thread",
  "signal",
  "sync",
] }
tracing = "0.1.43"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }

[[bin]]
name = "vik"
path = "src/main.rs"

[dev-dependencies]
chrono = "0.4.44"
tempfile = "3.23.0"
