[package]
name = "vik-http"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum = { version = "0.8.9", features = ["json"] }
chrono = { version = "0.4.44", features = ["serde"] }
serde_json = "1.0.149"
vik-core = { version = "0.1.0", path = "../vik-core" }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = [
  "net",
  "rt-multi-thread",
  "macros",
  "sync",
] }
tracing = "0.1.43"
