[package]
name = "vik-tracker"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.44", features = ["serde"] }
futures-util = "0.3.32"
reqwest = { version = "0.13.3", default-features = false, features = [
  "json",
  "rustls",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
vik-core = { version = "0.1.0", path = "../vik-core" }
thiserror = "2.0.18"
