[package]
name = "vik-workflow"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
minijinja = { version = "2.19.0", features = ["loader", "json"] }
notify = "8.2.0"
serde = { features = ["derive"], version = "1.0.228" }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
vik-core = { version = "0.1.0", path = "../vik-core" }
vik-tracker = { version = "0.1.0", path = "../vik-tracker" }
thiserror = "2.0.18"
tokio = { features = ["sync"], version = "1.52.1" }
tracing = "0.1.43"

[dev-dependencies]
tempfile = "3.23.0"
