[package]
name = "vik-workspace"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
vik-core = { version = "0.1.0", path = "../vik-core" }
vik-workflow = { version = "0.1.0", path = "../vik-workflow" }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = [
  "fs",
  "io-util",
  "process",
  "time",
  "macros",
  "rt-multi-thread",
] }
tracing = "0.1.43"

[dev-dependencies]
tempfile = "3.23.0"
